# kraalzibar

./: .dockerignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  kraalzibar.toml
.claude/: settings.json
.github/workflows/: docker-publish.yml  integration.yml  rust.yml  sdk-go.yml  sdk-typescript.yml
crates/kraalzibar-client/: Cargo.toml  README.md  build.rs
crates/kraalzibar-client/src/: client.rs  config.rs  conversions.rs  error.rs  interceptor.rs  lib.rs
crates/kraalzibar-client/tests/: integration_test.rs
crates/kraalzibar-core/: Cargo.toml
crates/kraalzibar-core/benches/: check_engine.rs
crates/kraalzibar-core/src/: lib.rs  tuple.rs
crates/kraalzibar-core/src/engine/: check.rs  expand.rs  mod.rs
crates/kraalzibar-core/src/schema/: grammar.pest  mod.rs  parser.rs  types.rs  validation.rs
crates/kraalzibar-server/: Cargo.toml
crates/kraalzibar-server/src/: adapter.rs  api_key_repository.rs  audit.rs  auth.rs  cli.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  metrics.rs  proto.rs  rate_limit.rs  service.rs  telemetry.rs  tls.rs  token.rs  validation.rs
crates/kraalzibar-server/src/grpc/: conversions.rs  mod.rs  permission_service.rs  relationship_service.rs  schema_service.rs
crates/kraalzibar-server/src/middleware/: auth.rs  mod.rs  tenant_rate_limit.rs
crates/kraalzibar-server/src/rest/: handlers.rs  mod.rs  types.rs
crates/kraalzibar-server/tests/: grpc_integration.rs  load_test.rs  tls_integration.rs
crates/kraalzibar-storage/: Cargo.toml
crates/kraalzibar-storage/src/: gc.rs  lib.rs  memory.rs  traits.rs
crates/kraalzibar-storage/src/postgres/: migrations.rs  mod.rs  queries.rs
docker/: .env.example  Dockerfile  docker-compose.yml  otel-collector.yml  prometheus.yml  tempo.yml
docker/grafana/provisioning/dashboards/: kraalzibar.json
docker/grafana/provisioning/datasources/: datasources.yml
proto/kraalzibar/v1/: core.proto  permission.proto  relationship.proto  schema.proto
sdks/go/: Makefile  README.md  client.go  error.go  error_test.go  go.mod  go.sum  integration_test.go  options.go  options_test.go  types.go  types_test.go
sdks/go/proto/kraalzibar/v1/: core.pb.go  permission.pb.go  permission_grpc.pb.go  relationship.pb.go  relationship_grpc.pb.go  schema.pb.go  schema_grpc.pb.go
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: client.ts  error.ts  index.ts  rest-transport.ts  types.ts
sdks/typescript/tests/: client.test.ts  integration.test.ts
tests/integration/: scenarios.yaml
website/: index.html
