[package]
name = "kraalzibar-client"
version = "0.1.0"
edition = "2024"

[dependencies]
kraalzibar-core = { path = "../kraalzibar-core" }
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
thiserror = "2"

[build-dependencies]
tonic-build = "0.12"
