[package]
name = "kraalzibar-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
pest = "2"
pest_derive = "2"
tokio = { version = "1", features = ["rt", "sync", "macros"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "check_engine"
harness = false
