[package]
name = "kraalzibar-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kraalzibar-server"
path = "src/main.rs"

[dependencies]
kraalzibar-core = { path = "../kraalzibar-core" }
kraalzibar-storage = { path = "../kraalzibar-storage" }
argon2 = "0.5"
axum = { version = "0.7", features = ["json"] }
prost = "0.13"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
tonic = "0.12"
tonic-health = "0.12"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
axum-test = "16"
tempfile = "3"
tonic = { version = "0.12", features = ["transport"] }

[build-dependencies]
tonic-build = "0.12"
