[package]
name = "kraalzibar-server"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "kraalzibar-server"
path = "src/main.rs"

[dependencies]
kraalzibar-core = { path = "../kraalzibar-core" }
kraalzibar-storage = { path = "../kraalzibar-storage" }
argon2 = "0.5"
axum = { version = "0.7", features = ["json"] }
clap = { version = "4", features = ["derive"] }
prost = "0.13"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
serde_json = "1"
moka = { version = "0.12", features = ["future"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
tonic = { version = "0.12", features = ["tls"] }
tonic-health = "0.12"
opentelemetry = { version = "0.24", optional = true }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.17", features = ["tonic"], optional = true }
tracing = "0.1"
tracing-opentelemetry = { version = "0.25", optional = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
uuid = { version = "1", features = ["v4"] }

[features]
default = ["telemetry"]
telemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]

[dev-dependencies]
axum-test = "16"
rcgen = "0.13"
tempfile = "3"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
tonic = { version = "0.12", features = ["transport", "tls"] }

[build-dependencies]
tonic-build = "0.12"
