[package]
name = "kraalzibar-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
kraalzibar-core = { path = "../kraalzibar-core" }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
